--- a/src/index.css
+++ b/src/index.css
@@ -39,3 +39,10 @@ body {
 .MuiAccordion-root::before {
   display: none!important;
 }
+
+.MuiAvatar-root {
+  font-size: 14px;
+  font-weight: 500;
+  width: 30px;
+  height: 30px;
+}
