--- a/src/index.css
+++ b/src/index.css
@@ -41,3 +41,33 @@ body {
 .MuiTableRow-root:hover {
   background-color: #f8f8f8;
 }
+
+.MuiAccordionSummary-content {
+  align-items: center;
+}
+
+.value-stats {
+  color: #2047e4!important;
+  text-align: right!important;
+  font-size: 16px!important;
+  font-weight: 500!important;
+}
+
+.title-stats {
+  text-align: left!important;
+  font-size: 16px!important;
+  font-weight: 400!important;
+}
+
+.value-stats-comp {
+  color: #2047e4!important;
+  text-align: right!important;
+  font-size: 14px!important;
+  font-weight: 500!important;
+}
+
+.title-stats-comp {
+  text-align: left!important;
+  font-size: 14px!important;
+  font-weight: 400!important;
+}
