--- a/src/index.css
+++ b/src/index.css
@@ -81,3 +81,9 @@ body {
 .MuiDataGrid-root {
   border-width: 0px!important;
 }
+
+.adsbygoogle {
+  display: block;
+  width: 100%;
+  height: auto; /* O specifica una dimensione se necessario */
+}
