--- a/src/index.css
+++ b/src/index.css
@@ -88,17 +88,13 @@ body {
   height: auto; /* O specifica una dimensione se necessario */
 }
 
-.recent-matches {
-  font-size: 12px!important;
-  vertical-align: middle!important;
-}
 
 table {
   width: 100%;
 }
 
-td, th {
-  vertical-align: middle; /* Allinea verticalmente al centro */
+td, th, tr {
+  vertical-align: middle!important; /* Allinea verticalmente al centro */
   text-align: center; /* Allinea orizzontalmente al centro, se necessario */
 }
 
