Single Player | Def

--- a/src/index.css
+++ b/src/index.css
@@ -47,28 +47,26 @@ body {
 }
 
 .value-stats {
-  color: #2047e4!important;
   text-align: right!important;
-  font-size: 16px!important;
+  font-size: 12px!important;
   font-weight: 500!important;
 }
 
 .title-stats {
   text-align: left!important;
-  font-size: 16px!important;
+  font-size: 12px!important;
   font-weight: 400!important;
 }
 
 .value-stats-comp {
-  color: #2047e4!important;
   text-align: right!important;
-  font-size: 14px!important;
+  font-size: 12px!important;
   font-weight: 500!important;
 }
 
 .title-stats-comp {
   text-align: left!important;
-  font-size: 14px!important;
+  font-size: 12px!important;
   font-weight: 400!important;
 }
 
@@ -111,5 +109,9 @@ img {
 }
 
 .career-history {
+  font-size: 12px!important;
+}
+
+.player-competitions {
   font-size: 12px!important;
 }
